tests/compilation_failure_tests/non_unit_variant/variant_struct_nonempty.stderr
error: Variant A is not a unit variant, all variants must be unit variants to derive EnumRotate
 --> tests/compilation_failure_tests/non_unit_variant/variant_struct_nonempty.rs:5:5
  |
5 | /     A {
6 | |         field: usize,
7 | |     },
  | |_____^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compilation_failure_tests/non_unit_variant/variant_struct_nonempty.rs:8:2
  |
8 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compilation_failure_tests/non_unit_variant/variant_struct_nonempty.rs`
